page hyper-link spacing issues fixed

--- a/index.css
+++ b/index.css
@@ -18,8 +18,11 @@ body {
 .horizontal-line-div {
   border-top: 1px solid black;
   width: 100%;
+  margin-top: 75px;
+}
+
+.space-div {
   height: 1px;
-  margin-top: 100px;
 }
 
 .first-horizontal-line-div {
@@ -78,7 +81,9 @@ header {
 }
 
 .contact {
-  border: 1px solid black;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
   border-right: none;
   margin-bottom: 15px;
   margin-left: 30%;
@@ -130,6 +135,10 @@ a {
     font-size: 1.2em;
   }
 
+  .menu-links {
+    margin-top: 70px;
+  }
+
   .hand {
     display: none;
   }
@@ -141,51 +150,8 @@ a {
   }
 
   .contact {
-    border: 1px solid black;
     margin-bottom: 15px;
     padding: 10px 0px 10px 40px;
     font-size: 1em;
-  }
-}
-
-@media only screen and (max-width: 1300px) {
-  footer {
-    margin-left: 84%;
-  }
-}
-
-@media only screen and (max-width: 1200px) {
-  footer {
-    margin-left: 80%;
-  }
-}
-
-@media only screen and (max-width: 1000px) {
-  footer {
-    margin-left: 77%;
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  footer {
-    margin-left: 73%;
-  }
-}
-
-@media only screen and (max-width: 700px) {
-  footer {
-    margin-left: 70%;
-  }
-}
-
-@media only screen and (max-width: 640px) {
-  footer {
-    margin-left: 62%;
-  }
-}
-
-@media only screen and (max-width: 440px) {
-  footer {
-    margin-left: 55%;
   }
 }
